[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Menu/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/HUD/LoadingScreen.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Baloo_Tamma/BalooTamma-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 196
use_mipmaps = true
use_filter = true
extra_spacing_top = -70
extra_spacing_bottom = -120
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.780392, 0.423529, 0.996078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0, 0, 0, 0.0666667 )
shadow_size = 5
shadow_offset = Vector2( 0, 4 )
anti_aliasing_size = 3

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.780392, 0.423529, 0.996078, 0.133333 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.207843 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0, 0, 0, 0.0666667 )
shadow_size = 5
shadow_offset = Vector2( 0, 4 )
anti_aliasing_size = 3

[sub_resource type="InputEventAction" id=6]
action = "ui_cancel"
pressed = true

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.04163
margin_top = -1.88773
margin_right = 8.04163
margin_bottom = -1.8877
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -437.0
margin_right = 200.0
margin_bottom = 437.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title and Version" type="VBoxContainer" parent="MainMenu"]
margin_right = 400.0
margin_bottom = 195.0

[node name="Title" type="Label" parent="MainMenu/Title and Version"]
margin_right = 400.0
margin_bottom = 148.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_as_outline = 0
text = "Sho"
align = 1

[node name="Version" type="Label" parent="MainMenu/Title and Version"]
margin_top = 152.0
margin_right = 400.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_constants/shadow_as_outline = 0
text = "v. 0.1"
align = 1

[node name="Resume" type="Button" parent="MainMenu"]
margin_top = 199.0
margin_right = 400.0
margin_bottom = 292.0
theme = ExtResource( 1 )
custom_styles/pressed = SubResource( 4 )
text = "Resume"

[node name="Continue" type="Button" parent="MainMenu"]
margin_top = 296.0
margin_right = 400.0
margin_bottom = 389.0
theme = ExtResource( 1 )
custom_styles/pressed = SubResource( 4 )
text = "Continue"

[node name="NewGame" type="Button" parent="MainMenu"]
margin_top = 393.0
margin_right = 400.0
margin_bottom = 486.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "New Game"

[node name="HighScores" type="Button" parent="MainMenu"]
margin_top = 490.0
margin_right = 400.0
margin_bottom = 583.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "High Scores"

[node name="Settings" type="Button" parent="MainMenu"]
margin_top = 587.0
margin_right = 400.0
margin_bottom = 680.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "Settings"

[node name="Info" type="Button" parent="MainMenu"]
margin_top = 684.0
margin_right = 400.0
margin_bottom = 777.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "Info"

[node name="Quit" type="Button" parent="MainMenu"]
margin_top = 781.0
margin_right = 400.0
margin_bottom = 874.0
hint_tooltip = "Exit the game"
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 7 )
text = "Quit"

[node name="QuitConfirmationDialog" type="ConfirmationDialog" parent="MainMenu/Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -428.5
margin_top = -46.5
margin_right = 460.5
margin_bottom = 183.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
popup_exclusive = true
window_title = ""
dialog_text = "Unsaved progress will be lost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -400.0
margin_right = 200.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGame"]
margin_right = 400.0
margin_bottom = 89.0
theme = ExtResource( 1 )
text = "Enter name:"
align = 1
valign = 1

[node name="PlayerNameEdit" type="LineEdit" parent="NewGame"]
margin_top = 93.0
margin_right = 400.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 1 )
align = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "Player"
placeholder_alpha = 0.118
caret_blink = true

[node name="Start" type="Button" parent="NewGame"]
margin_top = 197.0
margin_right = 400.0
margin_bottom = 290.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
disabled = true
text = "Start"

[node name="NewGameBack" type="Button" parent="NewGame"]
margin_top = 294.0
margin_right = 400.0
margin_bottom = 387.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 7 )
text = "Back"

[node name="Continue" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -400.0
margin_right = 200.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue Game" type="Label" parent="Continue"]
margin_right = 462.0
margin_bottom = 89.0
theme = ExtResource( 1 )
text = "Continue Game:"
align = 1
valign = 1

[node name="GameList" type="ItemList" parent="Continue"]
margin_top = 93.0
margin_right = 462.0
margin_bottom = 543.0
rect_min_size = Vector2( 0, 450 )
theme = ExtResource( 1 )
items = [ "Blah", null, false, "Tgssgs", null, false ]
fixed_icon_size = Vector2( 32, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Continue"]
margin_top = 547.0
margin_right = 462.0
margin_bottom = 640.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
disabled = true
text = "Continue"

[node name="ContinueBack" type="Button" parent="Continue"]
margin_top = 644.0
margin_right = 462.0
margin_bottom = 737.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 7 )
text = "Back"

[node name="LoadingScreen" parent="." instance=ExtResource( 3 )]

[connection signal="visibility_changed" from="." to="." method="_on_Menu_visibility_changed"]
[connection signal="pressed" from="MainMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MainMenu/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MainMenu/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MainMenu/HighScores" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="confirmed" from="MainMenu/Quit/QuitConfirmationDialog" to="." method="_on_QuitConfirmationDialog_confirmed"]
[connection signal="text_changed" from="NewGame/PlayerNameEdit" to="." method="_on_PlayerNameEdit_text_changed"]
[connection signal="pressed" from="NewGame/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="NewGame/NewGameBack" to="." method="_on_NewGameBack_pressed"]
[connection signal="item_selected" from="Continue/GameList" to="." method="_on_GameList_item_selected"]
[connection signal="pressed" from="Continue/Continue" to="." method="_on_ContinueGame_pressed"]
[connection signal="pressed" from="Continue/ContinueBack" to="." method="_on_ContinueBack_pressed"]
